# A-Trader

./: .gitignore  STRATEGY_FEATURE.md
ctp_core/: CMakeLists.txt
ctp_core/include/api/: MdHandler.h  TraderHandler.h
ctp_core/include/db/: DatabaseWorker.h
ctp_core/include/network/: CommandServer.h  Publisher.h
ctp_core/include/position/: PositionManager.h  PositionStructs.h
ctp_core/include/storage/: DBManager.h
ctp_core/include/strategy/: ConditionEngine.h
ctp_core/include/utils/: Encoding.h
ctp_core/sql/: schema.sql
ctp_core/src/: main.cpp
ctp_core/src/api/: MdHandler.cpp  TraderHandler.cpp
ctp_core/src/network/: CommandServer.cpp  Publisher.cpp
ctp_core/src/position/: PositionManager.cpp
ctp_core/src/storage/: DBManager.cpp
ctp_core/src/strategy/: ConditionEngine.cpp
qt_manager/: .qmllint.ini  CMakeLists.txt  build_windows.bat  config.example.json  config.json  deploy_windows.bat  run_windows_dev.bat
qt_manager/build-windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app_icon.rc  qt_manager.sln  qt_manager.vcxproj  qt_manager.vcxproj.filters
qt_manager/build-windows/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
qt_manager/build-windows/Release/: config.example.json  config.json
qt_manager/build-windows/Release/qml/QML/: qmldir
qt_manager/build-windows/Release/qml/QtQuick/Controls/Basic/: AbstractButton.qml  Action.qml  ActionGroup.qml  ApplicationWindow.qml  BusyIndicator.qml  Button.qml  ButtonGroup.qml  Calendar.qml  CalendarModel.qml  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  Container.qml  Control.qml  DayOfWeekRow.qml  DelayButton.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GroupBox.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  MonthGrid.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RangeSlider.qml  RoundButton.qml  ScrollBar.qml  (+26 more)
qt_manager/build-windows/Release/qml/QtQuick/Controls/FluentWinUI3/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  Config.qml  DelayButton.qml  Dialog.qml  DialogButtonBox.qml  FocusFrame.qml  Frame.qml  GroupBox.qml  ItemDelegate.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  PageIndicator.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RangeSlider.qml  RoundButton.qml  SearchField.qml  Slider.qml  SpinBox.qml  StyleImage.qml  SwipeDelegate.qml  Switch.qml  SwitchDelegate.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolSeparator.qml  (+2 more)
qt_manager/build-windows/Release/qml/QtQuick/Controls/Fusion/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  DelayButton.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GroupBox.qml  HorizontalHeaderView.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  Pane.qml  (+30 more)
qt_manager/build-windows/Release/qml/QtQuick/Layouts/: qmldir
qt_manager/build-windows/Release/qml/QtQuick/NativeStyle/: qmldir
qt_manager/build-windows/Release/translations/: qt_ca.qm  qt_de.qm  qt_fr.qm  qt_hu.qm  qt_ja.qm  qt_ka.qm  qt_nn.qm  qt_pl.qm  qt_pt_BR.qm  qt_sv.qm  qt_tr.qm  qt_zh_CN.qm
qt_manager/build-windows/qml/: qml.qrc.depends
qt_manager/build-windows/qt_manager.dir/Release/: app_icon.res  qt_manager.exe.recipe
qt_manager/build-windows/qt_manager.dir/Release/qt_manager.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
qt_manager/build-windows/qt_manager_autogen/: mocs_compilation_Release.cpp
qt_manager/build-windows/qt_manager_autogen/include_Release/M4YTXQ7V2H/: moc_AccountInfo.cpp.d  moc_MarketModel.cpp.d  moc_OrderController.cpp.d  moc_OrderModel.cpp.d  moc_PositionModel.cpp.d  moc_TradeModel.cpp.d
qt_manager/build-windows/qt_manager_autogen/include_Release/UFQQIFJZKK/: moc_CommandWorker.cpp.d  moc_ZmqWorker.cpp.d
qt_manager/build-windows/resources/: resources.qrc.depends
qt_manager/build-windows/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
qt_manager/build-windows/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
qt_manager/build-windows/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
qt_manager/build-windows/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
qt_manager/qml/: AccountInfoPanel.qml  ConditionListPanel.qml  ConditionOrderDialog.qml  ConditionOrderPanel.qml  ConditionOrderPanel.qml.backup  MARKET_PANEL_FEATURES.md  MarketQuotePanel.qml  OrderListPanel.qml  OrderPanel.qml  PositionPanel.qml  README_REFACTOR.md  SettingsWindow.qml  TradeListPanel.qml  main.qml  qml.qrc
qt_manager/resources/: app_icon.rc  app_icon.rc.in
qt_manager/resources/sounds/: README.md
qt_manager/src/: main.cpp
qt_manager/src/models/: AccountInfo.cpp  AccountInfo.h  MarketModel.cpp  MarketModel.h  OrderController.cpp  OrderController.h  OrderModel.cpp  OrderModel.h  PositionModel.cpp  PositionModel.h  TradeModel.cpp  TradeModel.h
qt_manager/src/network/: CommandWorker.cpp  CommandWorker.h  ZmqWorker.cpp  ZmqWorker.h
(+238 files in other folders)
